# ParallelProgramming

./: CMakeLists.txt
MPI_Exp/: CMakeLists.txt  accuracy_compare.py  plot.py  task.cpp  time_compare.py
MPI_Exp/res/: compare1.txt  compare2.txt  delete_spaces.cpp
MPI_Intro/: CMakeLists.txt  task1.c  task2.c  task3.c
MPI_Lab/: CMakeLists.txt  plot_compare.py  plot_visualization.py  task.cpp
MPI_Lab/res/: compare.txt  output.txt  res.txt
MPI_Sends/: CMakeLists.txt  plot.py  task.c  time_compare.py
MPI_Sends/res/: compare.txt
MPI_Servers_and_files/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
MPI_Sort/: CMakeLists.txt  plot.py  sort.hpp  sort_compare.py  task.cpp
MPI_Sort/res/: compare.txt
OCL_Intro/: CMakeLists.txt  devices.cc
OMP_Equation/: CMakeLists.txt  equation.cc  plot.py
OMP_Intro/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
OMP_Lab/: 1c.cc  3b.cc  CMakeLists.txt  base.cc  common.h  data.json  mpi_1c.cc  mpi_base.cc  omp_3b.cc  omp_base.cc  plot.py
OMP_Primes/: CMakeLists.txt  Primes.cc  primes.cc
OMP_Sudoku/: CMakeLists.txt  Sudoku.cc  Sudoku.h  ex1.txt  ex5.txt  main.cc  sudoku.cpp
OMP_Tasks/: CMakeLists.txt  balance.cpp  nested.cpp  untied.cpp
Thread_Integral/: CMakeLists.txt  plot_compare.py  task.cpp
Thread_Integral/res/: compare.txt
Thread_Intro/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
